--- a/theme/templates/resource-landing-page/additional-metadata.html
+++ b/theme/templates/resource-landing-page/additional-metadata.html
@@ -25,13 +25,11 @@
                     {% if metadata_form %}
                         <td>
                             <span data-loop-counter="{{ forloop.counter0 }}"
-                                  class="glyphicon glyphicon-pencil icon-blue btn-edit-extra-metadata table-icon"
-                                  data-toggle="tooltip" data-placement="top"
-                                  title="Edit">
+                               class="glyphicon glyphicon-pencil icon-blue icon-button btn-edit-extra-metadata table-icon"
+                               title="Edit">
                             </span>
                             <span data-loop-counter="{{ forloop.counter0 }}"
-                                  class="glyphicon glyphicon-trash btn-remove btn-remove-extra-metadata table-icon"
-                                  data-toggle="tooltip" data-placement="top"
+                                  class="glyphicon glyphicon-trash btn-remove icon-button btn-remove-extra-metadata table-icon"
                                   title="Remove"></span>
                         </td>
                     {% endif %}
