--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -676,32 +676,38 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="add-relation"> Add Relation </h4></div>
+                    <h4 class="modal-title" id="add-relation"> Add Relation </h4>
+                </div>
                 <div class="modal-body">
                     {% csrf_token %}
 
                     <div class="form-group">
                         {% csrf_token %}
                         <fieldset>
-                            <legend>Relation</legend>
-                            <div id="div_id_type" class="control-group"><label for="id_type"
-                                                                               class="control-label requiredField">
-                                Relation type<span class="asteriskField">*</span></label>
+                            <div id="div_id_type" class="control-group">
+                                <label for="id_type" class="control-label requiredField">
+                                Type of relationship<span class="asteriskField">*</span></label>
 
-                                <div class="controls"><select class="form-control input-sm select" id="id_type" name="type">
-                                    <option value="" selected="selected">---------</option>
-                                    {% for type_value, type_display in relation_source_types %}
-                                        <option value={{ type_value }}>{{ type_display }}</option>
-                                    {% endfor %}
-                                </select></div>
+                                <div class="controls">
+                                    <select class="form-control input-sm select" id="id_type" name="type">
+                                        <option value="" selected="selected">---------</option>
+                                        {% for type_value, type_display in relation_source_types %}
+                                            <option value={{ type_value }}>{{ type_display }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             </div>
-                            <div id="div_id_value" class="control-group"><label for="id_value"
-                                                                                class="control-label requiredField">
-                                Related to<span class="asteriskField">*</span></label>
+                            <div id="div_id_value" class="control-group">
+                                <label for="id_value" class="control-label requiredField">
+                                    Full text citation, URL link for, or description of the related resource
+                                    <span class="asteriskField">*</span>
+                                </label>
 
-                                <div class="controls"><input class="form-control input-sm textinput textInput"
-                                                             id="id_value" maxlength="500" name="value"
-                                                             type="text"></div>
+                                <div class="controls">
+                                    <input class="form-control input-sm textinput textInput"
+                                           id="id_value" maxlength="500" name="value"
+                                           type="text">
+                                </div>
                             </div>
                         </fieldset>
                     </div>
@@ -1372,8 +1378,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="btn-confirm-extended-metadata" type="button" class="btn btn-primary">Save Changes</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button id="btn-confirm-extended-metadata" type="button" class="btn btn-primary">Save Changes</button>
                 </div>
             </form>
         </div>
@@ -1403,24 +1409,19 @@
                         <ul>
                             <li>
                                 <p><strong>Owners</strong> can perform all operations on a resource and set whether
-                                    a
-                                    resource is Public,
+                                    a resource is Public,
                                     Discoverable, or Private and Shareable. Resources that are Public have all their
                                     content
                                     visible to all users. Resources that are Discoverable have only their metadata
                                     public.
                                     Resources that are private are only accessible to specific users or groups that
-                                    they
-                                    have
-                                    been shared with.</p>
+                                    they have been shared with.</p>
                             </li>
                             <li>
                                 <p><strong>Editors</strong> can edit resource metadata and add and delete resource
                                     content files. If the resource
                                     is Shareable editors can use manage access to extend editing or viewing access
-                                    to
-                                    other
-                                    users.</p>
+                                    to other users.</p>
                             </li>
                             <li><p><strong>Viewers</strong> can view resource metadata and download resource content
                                 files. If the resource is
