--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -405,7 +405,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <span class="btn btn-primary btn-create-resource pull-right">Create Resource</span>
-                        <span class="btn btn-primary btn-cancel-create-resource pull-left">Cancel</span>
+                        <span class="btn btn-default btn-cancel-create-resource pull-left">Cancel</span>
                     </div>
                 </div>
             </div>
