Resize control improvements

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -699,7 +699,7 @@
                                             </ul>
                                         </form>
                                     </div>
-                                    <div class="fb-metadata h-100">
+                                    <div id="fb-metadata" class="fb-metadata h-100">
                                         {% if cm.resource_type == "CompositeResource" %}
                                             <div id="fileTypeMetaDataTab">
                                                 <div id="#fb-metadata-default" class="text-center text-muted" role="alert">
